[project]
name = "cursor-aiserver-interceptor"
version = "0.1.0"
description = "MITM Proxy Cursor Debug Script"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mitmproxy>=11.1.3", "protobuf>=6.30.2"]

[tool.ruff.lint]
extend-select = ["I"]
task-tags = ["FIXME", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

[tool.pyright]
typeCheckingMode = "basic"
